-
Bug
-
Resolution: Done
-
P1: Critical
-
5.0.0 Beta 1
-
None
-
Ubuntu 10.10 , Windows 7
Run the photoviewer demo, add a new text label and enter some text, then try and select that text with the keyboard.
The demo crashes with the following backtrace:
#0 0xb7d78638 in QSGGeometry::attributeCount (this=0x0) at ../../../../../../depot/qt/5.0/qtdeclarative/src/quick/scenegraph/coreapi/qsggeometry.h:148 #1 0xb7d7beb8 in QSGRenderer::updateStencilClip (this=0xb34413b8, clip=0x8272290) at ../../../../../../depot/qt/5.0/qtdeclarative/src/quick/scenegraph/coreapi/qsgrenderer.cpp:525 #2 0xb7d71b59 in QSGDefaultRenderer::renderNodes (this=0xb34413b8, nodes=0xb3441998, count=41) at ../../../../../../depot/qt/5.0/qtdeclarative/src/quick/scenegraph/coreapi/qsgdefaultrenderer.cpp:493 #3 0xb7d70f79 in QSGDefaultRenderer::render (this=0xb34413b8) at ../../../../../../depot/qt/5.0/qtdeclarative/src/quick/scenegraph/coreapi/qsgdefaultrenderer.cpp:281 #4 0xb7d7aae6 in QSGRenderer::renderScene (this=0xb34413b8, bindable=...) at ../../../../../../depot/qt/5.0/qtdeclarative/src/quick/scenegraph/coreapi/qsgrenderer.cpp:271 #5 0xb7d7a97d in QSGRenderer::renderScene (this=0xb34413b8) at ../../../../../../depot/qt/5.0/qtdeclarative/src/quick/scenegraph/coreapi/qsgrenderer.cpp:229 #6 0xb7d8d968 in QSGContext::renderNextFrame (this=0x80a4798, renderer=0xb34413b8, fboId=0) at ../../../../../../depot/qt/5.0/qtdeclarative/src/quick/scenegraph/qsgcontext.cpp:270 #7 0xb7dca502 in QQuickCanvasPrivate::renderSceneGraph (this=0x80a1698, size=...) at ../../../../../../depot/qt/5.0/qtdeclarative/src/quick/items/qquickcanvas.cpp:323 #8 0xb7ee166f in QQuickTrivialWindowManager::renderCanvas (this=0x80a4718, canvas=0x80a0bc8) at ../../../../../../depot/qt/5.0/qtdeclarative/src/quick/items/qquickwindowmanager.cpp:1223 #9 0xb7ee1a0f in QQuickTrivialWindowManager::event (this=0x80a4718, e=0x837a1f0) at ../../../../../../depot/qt/5.0/qtdeclarative/src/quick/items/qquickwindowmanager.cpp:1306 #10 0xb6f56f44 in QApplicationPrivate::notify_helper (this=0x8082f38, receiver=0x80a4718, e=0x837a1f0) at /home/denexter/depot/qt/5.0/qtbase/src/widgets/kernel/qapplication.cpp:3589 #11 0xb6f5495c in QApplication::notify (this=0xbffff3f4, receiver=0x80a4718, e=0x837a1f0) at /home/denexter/depot/qt/5.0/qtbase/src/widgets/kernel/qapplication.cpp:3048 #12 0xb62f8dd3 in QCoreApplication::notifyInternal (this=0xbffff3f4, receiver=0x80a4718, event=0x837a1f0) at /home/denexter/depot/qt/5.0/qtbase/src/corelib/kernel/qcoreapplication.cpp:725 #13 0xb62fca4d in QCoreApplication::sendEvent (receiver=0x80a4718, event=0x837a1f0) at /home/denexter/depot/qt/5.0/qtbase/src/corelib/kernel/qcoreapplication.h:211 #14 0xb62f9f0c in QCoreApplicationPrivate::sendPostedEvents (receiver=0x0, event_type=0, data=0x807c490) at /home/denexter/depot/qt/5.0/qtbase/src/corelib/kernel/qcoreapplication.cpp:1325 #15 0xb62f99db in QCoreApplication::sendPostedEvents (receiver=0x0, event_type=0) at /home/denexter/depot/qt/5.0/qtbase/src/corelib/kernel/qcoreapplication.cpp:1185 #16 0xb6363b8b in postEventSourceDispatch (s=0x808b1b0) at /home/denexter/depot/qt/5.0/qtbase/src/corelib/kernel/qeventdispatcher_glib.cpp:278 #17 0xb6bb15e5 in g_main_context_dispatch () from /lib/libglib-2.0.so.0 #18 0xb6bb52d8 in ?? () from /lib/libglib-2.0.so.0 #19 0xb6bb54b8 in g_main_context_iteration () from /lib/libglib-2.0.so.0 #20 0xb6364b64 in QEventDispatcherGlib::processEvents (this=0x80847c0, flags=...) at /home/denexter/depot/qt/5.0/qtbase/src/corelib/kernel/qeventdispatcher_glib.cpp:423 #21 0xb62f563b in QEventLoop::processEvents (this=0xbffff2bc, flags=...) at /home/denexter/depot/qt/5.0/qtbase/src/corelib/kernel/qeventloop.cpp:135 #22 0xb62f58f3 in QEventLoop::exec (this=0xbffff2bc, flags=...) at /home/denexter/depot/qt/5.0/qtbase/src/corelib/kernel/qeventloop.cpp:211 #23 0xb62f9481 in QCoreApplication::exec () at /home/denexter/depot/qt/5.0/qtbase/src/corelib/kernel/qcoreapplication.cpp:977 #24 0xb66c7989 in QGuiApplication::exec () at /home/denexter/depot/qt/5.0/qtbase/src/gui/kernel/qguiapplication.cpp:1007 #25 0xb6f54616 in QApplication::exec () at /home/denexter/depot/qt/5.0/qtbase/src/widgets/kernel/qapplication.cpp:2939 #26 0x0804d1fd in main (argc=2, argv=0xbffff5b4) at ../../../../../../depot/qt/5.0/qtdeclarative/tools/qmlscene/main.cpp:450
- resulted from
-
QTBUG-26213 Can't input non-English text in photoviewer example
-
- Open
-
For Gerrit Dashboard: QTBUG-26234 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
28999,1 | Fix crash when selecting rotated text. | master | qt/qtdeclarative | Status: ABANDONED | -1 | 0 |
29085,1 | Fix crash when selecting transformed text. | master | qt/qtdeclarative | Status: MERGED | +2 | 0 |