Fix crash when selecting transformed text.

QSGClipNode cannot be used directly, a sub-class or external provider
of geometry is required.

Task-number: QTBUG-26234
Change-Id: I0354ec17b619886b95f7994ad5af5c96e97397a0
Reviewed-by: Gunnar Sletta <gunnar.sletta@nokia.com>